--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
 <body>
-
-<h2>The href Attribute</h2>
-
-<p>HTML links are defined with the a tag. The link address is specified in the href attribute:</p>
-
-<a href="https://www.w3schools.com" >Acesso o UOL</a>
-
+    
 </body>
 </html>
