--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <header>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>rock</li>
+            <li>samba</li>
+            <li>pagode</li>
         </ul>
     </header>
 </body>
