--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-   <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <title>1mb - newton</title>
 </head>
 
@@ -17,6 +17,19 @@
             <li class="nav-item">pagode</li>
         </ul>
     </header>
+
+    <main>
+        <section class="secao">
+            <div class="titulo_section">
+                <h1>rock</h1>
+            </div>
+            <ul class="moldura_videos">
+                <li class="video"></li>
+                <li class="video"></li>
+                <li class="video"></li>
+            </ul>
+        </section>
+    </main>
 </body>
 
 </html>
